Generated/GameMakerLanguageParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.12.0
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from GameMakerLanguageParser.g4 by ANTLR 4.12.0

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.12.0")]
[System.CLSCompliant(false)]
public partial class GameMakerLanguageParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		MultiLineComment=1, SingleLineComment=2, OpenBracket=3, ListAccessor=4, 
		MapAccessor=5, GridAccessor=6, ArrayAccessor=7, StructAccessor=8, CloseBracket=9, 
		OpenParen=10, CloseParen=11, OpenBrace=12, TemplateStringEndExpression=13, 
		CloseBrace=14, Begin=15, End=16, SemiColon=17, Comma=18, Assign=19, Colon=20, 
		Dot=21, PlusPlus=22, MinusMinus=23, Plus=24, Minus=25, BitNot=26, Not=27, 
		Multiply=28, Divide=29, IntegerDivide=30, Modulo=31, Power=32, QuestionMark=33, 
		NullCoalesce=34, NullCoalescingAssign=35, RightShiftArithmetic=36, LeftShiftArithmetic=37, 
		LessThan=38, MoreThan=39, LessThanEquals=40, GreaterThanEquals=41, Equals_=42, 
		NotEquals=43, BitAnd=44, BitXOr=45, BitOr=46, And=47, Or=48, Xor=49, MultiplyAssign=50, 
		DivideAssign=51, PlusAssign=52, MinusAssign=53, ModulusAssign=54, LeftShiftArithmeticAssign=55, 
		RightShiftArithmeticAssign=56, BitAndAssign=57, BitXorAssign=58, BitOrAssign=59, 
		NumberSign=60, DollarSign=61, AtSign=62, BooleanLiteral=63, IntegerLiteral=64, 
		DecimalLiteral=65, BinaryLiteral=66, HexIntegerLiteral=67, Undefined=68, 
		NoOne=69, Break=70, Exit=71, Do=72, Case=73, Else=74, New=75, Var=76, 
		GlobalVar=77, Catch=78, Finally=79, Return=80, Continue=81, For=82, Switch=83, 
		While=84, Until=85, Repeat=86, Function=87, With=88, Default=89, If=90, 
		Then=91, Throw=92, Delete=93, Try=94, Enum=95, Constructor=96, Static=97, 
		Macro=98, EscapedNewLine=99, Define=100, Region=101, EndRegion=102, Identifier=103, 
		StringLiteral=104, TemplateStringStart=105, VerbatimStringLiteral=106, 
		WhiteSpaces=107, LineTerminator=108, UnexpectedCharacter=109, RegionCharacters=110, 
		RegionEOL=111, TemplateStringEnd=112, TemplateStringStartExpression=113, 
		TemplateStringText=114;
	public const int
		RULE_program = 0, RULE_statementList = 1, RULE_statement = 2, RULE_block = 3, 
		RULE_ifStatement = 4, RULE_iterationStatement = 5, RULE_withStatement = 6, 
		RULE_switchStatement = 7, RULE_continueStatement = 8, RULE_breakStatement = 9, 
		RULE_exitStatement = 10, RULE_emptyStatement = 11, RULE_caseBlock = 12, 
		RULE_caseClauses = 13, RULE_caseClause = 14, RULE_defaultClause = 15, 
		RULE_throwStatement = 16, RULE_tryStatement = 17, RULE_catchProduction = 18, 
		RULE_finallyProduction = 19, RULE_returnStatement = 20, RULE_deleteStatement = 21, 
		RULE_assignmentExpression = 22, RULE_variableDeclarationList = 23, RULE_varModifier = 24, 
		RULE_variableDeclaration = 25, RULE_globalVarStatement = 26, RULE_lValueStartExpression = 27, 
		RULE_lValueExpression = 28, RULE_lValueChainOperator = 29, RULE_lValueFinalOperator = 30, 
		RULE_newExpression = 31, RULE_expressionSequence = 32, RULE_expressionOrFunction = 33, 
		RULE_expression = 34, RULE_callStatement = 35, RULE_callableExpression = 36, 
		RULE_incDecStatement = 37, RULE_accessor = 38, RULE_arguments = 39, RULE_assignmentOperator = 40, 
		RULE_literal = 41, RULE_templateStringLiteral = 42, RULE_templateStringAtom = 43, 
		RULE_arrayLiteral = 44, RULE_elementList = 45, RULE_structLiteral = 46, 
		RULE_propertyAssignment = 47, RULE_propertyIdentifier = 48, RULE_functionDeclaration = 49, 
		RULE_constructorClause = 50, RULE_parameterList = 51, RULE_parameterArgument = 52, 
		RULE_identifier = 53, RULE_enumeratorDeclaration = 54, RULE_enumeratorList = 55, 
		RULE_enumerator = 56, RULE_macroStatement = 57, RULE_defineStatement = 58, 
		RULE_regionStatement = 59, RULE_identifierStatement = 60, RULE_softKeyword = 61, 
		RULE_propertySoftKeyword = 62, RULE_openBlock = 63, RULE_closeBlock = 64, 
		RULE_eos = 65, RULE_macroToken = 66;
	public static readonly string[] ruleNames = {
		"program", "statementList", "statement", "block", "ifStatement", "iterationStatement", 
		"withStatement", "switchStatement", "continueStatement", "breakStatement", 
		"exitStatement", "emptyStatement", "caseBlock", "caseClauses", "caseClause", 
		"defaultClause", "throwStatement", "tryStatement", "catchProduction", 
		"finallyProduction", "returnStatement", "deleteStatement", "assignmentExpression", 
		"variableDeclarationList", "varModifier", "variableDeclaration", "globalVarStatement", 
		"lValueStartExpression", "lValueExpression", "lValueChainOperator", "lValueFinalOperator", 
		"newExpression", "expressionSequence", "expressionOrFunction", "expression", 
		"callStatement", "callableExpression", "incDecStatement", "accessor", 
		"arguments", "assignmentOperator", "literal", "templateStringLiteral", 
		"templateStringAtom", "arrayLiteral", "elementList", "structLiteral", 
		"propertyAssignment", "propertyIdentifier", "functionDeclaration", "constructorClause", 
		"parameterList", "parameterArgument", "identifier", "enumeratorDeclaration", 
		"enumeratorList", "enumerator", "macroStatement", "defineStatement", "regionStatement", 
		"identifierStatement", "softKeyword", "propertySoftKeyword", "openBlock", 
		"closeBlock", "eos", "macroToken"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, "'['", "'[|'", "'[?'", "'[#'", "'[@'", "'[$'", "']'", 
		"'('", "')'", null, null, "'}'", "'begin'", "'end'", "';'", "','", null, 
		"':'", "'.'", "'++'", "'--'", "'+'", "'-'", "'~'", null, "'*'", "'/'", 
		"'div'", null, "'**'", "'?'", "'??'", "'??='", "'>>'", "'<<'", "'<'", 
		"'>'", "'<='", "'>='", "'=='", null, "'&'", "'^'", "'|'", null, null, 
		null, "'*='", "'/='", "'+='", "'-='", "'%='", "'<<='", "'>>='", "'&='", 
		"'^='", "'|='", "'#'", "'$'", "'@'", null, null, null, null, null, "'undefined'", 
		"'noone'", "'break'", "'exit'", "'do'", "'case'", "'else'", "'new'", "'var'", 
		"'globalvar'", "'catch'", "'finally'", "'return'", "'continue'", "'for'", 
		"'switch'", "'while'", "'until'", "'repeat'", "'function'", "'with'", 
		"'default'", "'if'", "'then'", "'throw'", "'delete'", "'try'", "'enum'", 
		"'constructor'", "'static'", "'#macro'", "'\\'", "'#define'", "'#region'", 
		"'#endregion'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "MultiLineComment", "SingleLineComment", "OpenBracket", "ListAccessor", 
		"MapAccessor", "GridAccessor", "ArrayAccessor", "StructAccessor", "CloseBracket", 
		"OpenParen", "CloseParen", "OpenBrace", "TemplateStringEndExpression", 
		"CloseBrace", "Begin", "End", "SemiColon", "Comma", "Assign", "Colon", 
		"Dot", "PlusPlus", "MinusMinus", "Plus", "Minus", "BitNot", "Not", "Multiply", 
		"Divide", "IntegerDivide", "Modulo", "Power", "QuestionMark", "NullCoalesce", 
		"NullCoalescingAssign", "RightShiftArithmetic", "LeftShiftArithmetic", 
		"LessThan", "MoreThan", "LessThanEquals", "GreaterThanEquals", "Equals_", 
		"NotEquals", "BitAnd", "BitXOr", "BitOr", "And", "Or", "Xor", "MultiplyAssign", 
		"DivideAssign", "PlusAssign", "MinusAssign", "ModulusAssign", "LeftShiftArithmeticAssign", 
		"RightShiftArithmeticAssign", "BitAndAssign", "BitXorAssign", "BitOrAssign", 
		"NumberSign", "DollarSign", "AtSign", "BooleanLiteral", "IntegerLiteral", 
		"DecimalLiteral", "BinaryLiteral", "HexIntegerLiteral", "Undefined", "NoOne", 
		"Break", "Exit", "Do", "Case", "Else", "New", "Var", "GlobalVar", "Catch", 
		"Finally", "Return", "Continue", "For", "Switch", "While", "Until", "Repeat", 
		"Function", "With", "Default", "If", "Then", "Throw", "Delete", "Try", 
		"Enum", "Constructor", "Static", "Macro", "EscapedNewLine", "Define", 
		"Region", "EndRegion", "Identifier", "StringLiteral", "TemplateStringStart", 
		"VerbatimStringLiteral", "WhiteSpaces", "LineTerminator", "UnexpectedCharacter", 
		"RegionCharacters", "RegionEOL", "TemplateStringEnd", "TemplateStringStartExpression", 
		"TemplateStringText"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "GameMakerLanguageParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static GameMakerLanguageParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public GameMakerLanguageParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public GameMakerLanguageParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(GameMakerLanguageParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public StatementListContext statementList() {
			return GetRuleContext<StatementListContext>(0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGameMakerLanguageParserVisitor<TResult> typedVisitor = visitor as IGameMakerLanguageParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 135;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 12751872L) != 0) || ((((_la - 70)) & ~0x3f) == 0 && ((1L << (_la - 70)) & 16631954663L) != 0)) {
				{
				State = 134;
				statementList();
				}
			}

			State = 137;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementListContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public StatementListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statementList; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGameMakerLanguageParserVisitor<TResult> typedVisitor = visitor as IGameMakerLanguageParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatementList(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementListContext statementList() {
		StatementListContext _localctx = new StatementListContext(Context, State);
		EnterRule(_localctx, 2, RULE_statementList);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 140;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 139;
				statement();
				}
				}
				State = 142;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 12751872L) != 0) || ((((_la - 70)) & ~0x3f) == 0 && ((1L << (_la - 70)) & 16631954663L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EmptyStatementContext emptyStatement() {
			return GetRuleContext<EmptyStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IfStatementContext ifStatement() {
			return GetRuleContext<IfStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public VariableDeclarationListContext variableDeclarationList() {
			return GetRuleContext<VariableDeclarationListContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IterationStatementContext iterationStatement() {
			return GetRuleContext<IterationStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ContinueStatementContext continueStatement() {
			return GetRuleContext<ContinueStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BreakStatementContext breakStatement() {
			return GetRuleContext<BreakStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ReturnStatementContext returnStatement() {
			return GetRuleContext<ReturnStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public WithStatementContext withStatement() {
			return GetRuleContext<WithStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SwitchStatementContext switchStatement() {
			return GetRuleContext<SwitchStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TryStatementContext tryStatement() {
			return GetRuleContext<TryStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ThrowStatementContext throwStatement() {
			return GetRuleContext<ThrowStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExitStatementContext exitStatement() {
			return GetRuleContext<ExitStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MacroStatementContext macroStatement() {
			return GetRuleContext<MacroStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DefineStatementContext defineStatement() {
			return GetRuleContext<DefineStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public RegionStatementContext regionStatement() {
			return GetRuleContext<RegionStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EnumeratorDeclarationContext enumeratorDeclaration() {
			return GetRuleContext<EnumeratorDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public GlobalVarStatementContext globalVarStatement() {
			return GetRuleContext<GlobalVarStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AssignmentExpressionContext assignmentExpression() {
			return GetRuleContext<AssignmentExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IncDecStatementContext incDecStatement() {
			return GetRuleContext<IncDecStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CallStatementContext callStatement() {
			return GetRuleContext<CallStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FunctionDeclarationContext functionDeclaration() {
			return GetRuleContext<FunctionDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EosContext eos() {
			return GetRuleContext<EosContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGameMakerLanguageParserVisitor<TResult> typedVisitor = visitor as IGameMakerLanguageParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 4, RULE_statement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 166;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				{
				State = 144;
				block();
				}
				break;
			case 2:
				{
				State = 145;
				emptyStatement();
				}
				break;
			case 3:
				{
				State = 146;
				ifStatement();
				}
				break;
			case 4:
				{
				State = 147;
				variableDeclarationList();
				}
				break;
			case 5:
				{
				State = 148;
				iterationStatement();
				}
				break;
			case 6:
				{
				State = 149;
				continueStatement();
				}
				break;
			case 7:
				{
				State = 150;
				breakStatement();
				}
				break;
			case 8:
				{
				State = 151;
				returnStatement();
				}
				break;
			case 9:
				{
				State = 152;
				withStatement();
				}
				break;
			case 10:
				{
				State = 153;
				switchStatement();
				}
				break;
			case 11:
				{
				State = 154;
				tryStatement();
				}
				break;
			case 12:
				{
				State = 155;
				throwStatement();
				}
				break;
			case 13:
				{
				State = 156;
				exitStatement();
				}
				break;
			case 14:
				{
				State = 157;
				macroStatement();
				}
				break;
			case 15:
				{
				State = 158;
				defineStatement();
				}
				break;
			case 16:
				{
				State = 159;
				regionStatement();
				}
				break;
			case 17:
				{
				State = 160;
				enumeratorDeclaration();
				}
				break;
			case 18:
				{
				State = 161;
				globalVarStatement();
				}
				break;
			case 19:
				{
				State = 162;
				assignmentExpression();
				}
				break;
			case 20:
				{
				State = 163;
				incDecStatement();
				}
				break;
			case 21:
				{
				State = 164;
				callStatement(0);
				}
				break;
			case 22:
				{
				State = 165;
				functionDeclaration();
				}
				break;
			}
			State = 169;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				{
				State = 168;
				eos();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public OpenBlockContext openBlock() {
			return GetRuleContext<OpenBlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CloseBlockContext closeBlock() {
			return GetRuleContext<CloseBlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementListContext statementList() {
			return GetRuleContext<StatementListContext>(0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_block; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGameMakerLanguageParserVisitor<TResult> typedVisitor = visitor as IGameMakerLanguageParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockContext block() {
		BlockContext _localctx = new BlockContext(Context, State);
		EnterRule(_localctx, 6, RULE_block);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 171;
			openBlock();
			State = 173;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 12751872L) != 0) || ((((_la - 70)) & ~0x3f) == 0 && ((1L << (_la - 70)) & 16631954663L) != 0)) {
				{
				State = 172;
				statementList();
				}
			}

			State = 175;
			closeBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IfStatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode If() { return GetToken(GameMakerLanguageParser.If, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Then() { return GetToken(GameMakerLanguageParser.Then, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Else() { return GetToken(GameMakerLanguageParser.Else, 0); }
		public IfStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ifStatement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGameMakerLanguageParserVisitor<TResult> typedVisitor = visitor as IGameMakerLanguageParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIfStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IfStatementContext ifStatement() {
		IfStatementContext _localctx = new IfStatementContext(Context, State);
		EnterRule(_localctx, 8, RULE_ifStatement);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 177;
			Match(If);
			State = 178;
			expression(0);
			State = 180;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==Then) {
				{
				State = 179;
				Match(Then);
				}
			}
